# MCP-Protocol-Email-Assistant

./: .env  README.md  config.py  example_workflows.md  langgraph_flow.py  local_server.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  security.md  test_mcp_tool.py  visualize_workflow.py  workflow_graph
tools/: categorize_mail.py  draft_mail.py  read_mail.py  schedule_mail.py
